// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Pagination basic render snapshoot 1`] = `
.c0 {
  padding-left: 14px;
  padding-right: 14px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 10px;
  color: #999999;
  cursor: default;
  border-color: #999999;
  background-color: #000000;
  font-size: 14px;
}

.c2 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #DC3545;
  font-size: 22px;
  text-align: left;
  font-weight: normal;
}

@media (min-width:320px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:320px) {
  .c1 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c3 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c4 {
    width: 49%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: auto;
    margin-left: 14px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Total Pages
    </p>
  </div>
  <div
    className="c3"
  >
    <button
      className="c4"
      onClick={[Function]}
    >
      Previous
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Pagination Pagination hasNextPage render snapshoot 1`] = `
.c0 {
  padding-left: 14px;
  padding-right: 14px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 10px;
  color: #999999;
  cursor: default;
  border-color: #999999;
  background-color: #000000;
  font-size: 14px;
}

.c5 {
  padding: 10px;
  color: #FFFFFF;
  cursor: pointer;
  border-color: #FFFFFF;
  background-color: #000000;
  font-size: 14px;
}

.c2 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #DC3545;
  font-size: 22px;
  text-align: left;
  font-weight: normal;
}

@media (min-width:320px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:320px) {
  .c1 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c3 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c4 {
    width: 49%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: auto;
    margin-left: 14px;
  }
}

@media (min-width:320px) {
  .c5 {
    width: 49%;
  }
}

@media (min-width:768px) {
  .c5 {
    width: auto;
    margin-left: 14px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Total Pages
    </p>
  </div>
  <div
    className="c3"
  >
    <button
      className="c4"
      onClick={[Function]}
    >
      Previous
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Pagination Pagination hasPrevPage and hasNextPage render snapshoot 1`] = `
.c0 {
  padding-left: 14px;
  padding-right: 14px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 10px;
  color: #FFFFFF;
  cursor: pointer;
  border-color: #FFFFFF;
  background-color: #000000;
  font-size: 14px;
}

.c2 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #DC3545;
  font-size: 22px;
  text-align: left;
  font-weight: normal;
}

@media (min-width:320px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:320px) {
  .c1 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c3 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c4 {
    width: 49%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: auto;
    margin-left: 14px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Total Pages
    </p>
  </div>
  <div
    className="c3"
  >
    <button
      className="c4"
      onClick={[Function]}
    >
      Previous
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Pagination Pagination hasPrevPage render snapshoot 1`] = `
.c0 {
  padding-left: 14px;
  padding-right: 14px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  padding: 10px;
  color: #999999;
  cursor: default;
  border-color: #999999;
  background-color: #000000;
  font-size: 14px;
}

.c4 {
  padding: 10px;
  color: #FFFFFF;
  cursor: pointer;
  border-color: #FFFFFF;
  background-color: #000000;
  font-size: 14px;
}

.c2 {
  margin-bottom: 22px;
  padding-left: 14px;
  padding-right: 14px;
  font-family: 'Roboto',sans-serif;
  color: #DC3545;
  font-size: 22px;
  text-align: left;
  font-weight: normal;
}

@media (min-width:320px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:320px) {
  .c1 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c3 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c3 {
    width: auto;
  }
}

@media (min-width:320px) {
  .c5 {
    width: 49%;
  }
}

@media (min-width:768px) {
  .c5 {
    width: auto;
    margin-left: 14px;
  }
}

@media (min-width:320px) {
  .c4 {
    width: 49%;
  }
}

@media (min-width:768px) {
  .c4 {
    width: auto;
    margin-left: 14px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Total Pages
    </p>
  </div>
  <div
    className="c3"
  >
    <button
      className="c4"
      onClick={[Function]}
    >
      Previous
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
